# disnakeapi

./: README.md  pyproject.toml
disnakeapi/: __init__.py  api.py  bot.py  cog.py  parser.py
examples/: simple.py
