[tool.poetry]
name = "disnakeapi"
version = "1.0.0"
description = "Create APIs within Disnake bots using aiohttp."
authors = ["vcokltfre <vcokltfre@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vcokltfre/disnakeapi"

[tool.poetry.dependencies]
python = "^3.10"
disnake = "^2.8"
aiohttp = "^3.8.4"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
taskipy = "^1.10.4"

[tool.taskipy.tasks]
format = "isort --profile black . && black ."

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
